[gd_scene load_steps=3 format=3 uid="uid://c75t6c8bki4p5"]

[ext_resource type="PackedScene" uid="uid://c71hgjo21iwjq" path="res://scenes/_interactives/base_interactive.tscn" id="1_dbfto"]
[ext_resource type="Script" uid="uid://v3pskyiaquyo" path="res://scenes/_interactives/manual_interactive.gd" id="2_qibqw"]

[node name="ManualInteractive" instance=ExtResource("1_dbfto")]
script = ExtResource("2_qibqw")

[node name="Area2D" parent="." index="0"]
collision_layer = 0
collision_mask = 4

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
